--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-command-palette",
+  "name": "@mattis/react-command-palette",
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
