--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist"
   ],
+  "keywords": ["react", "command", "palette", "cmdk", "shortcut", "ctrl+k", "github"],
   "type": "module",
   "scripts": {
     "build": "tsup",
