--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A flexible, accessible command palette component for React applications.",
   "author": "Mattis",
   "license": "MIT",
-
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-
-  "files": ["dist", "README.md"],
-
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "keywords": [
     "react",
     "command",
@@ -20,9 +20,7 @@
     "ctrl+k",
     "github"
   ],
-
   "type": "module",
-
   "scripts": {
     "build": "tsup src/index.ts --dts",
     "dev": "tsup src/index.ts --watch",
@@ -31,12 +29,10 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
-
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.14",
@@ -53,8 +49,14 @@
     "typescript-eslint": "^8.44.1",
     "vitepress": "^2.0.0-alpha.12"
   },
-
   "publishConfig": {
     "access": "public"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
   }
 }
